| Summary: | ASTERISK-22037: Fix AMI action AttendedTransfer to use both DTMF Begin and End | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2013-07-07 20:30:40 | Date Closed: | 2013-08-15 09:25:06 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/ManagerInterface |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The bridging core feature hooks need both a DTMF begin and end frame in order to fire. The AMI action AttendedTransfer only sends AST_FRAME_DTMF (end frames).
{noformat} /* BUGBUG action_atxfer() is broken because the bridge DTMF hooks need both begin and end events to match correctly. */ for (digit = feature_code; *digit; ++digit) { struct ast_frame f = { AST_FRAME_DTMF, .subclass.integer = *digit }; ast_queue_frame(chan, &f); } for (digit = exten; *digit; ++digit) { struct ast_frame f = { AST_FRAME_DTMF, .subclass.integer = *digit }; ast_queue_frame(chan, &f); } {noformat} *Note:* As goofy as setting a feature on a channel and then triggering it is, this works and it's not worth using a more elegant approach. | ||
| Comments: | |||