include/asterisk/bridge_channel_internal.h
@@ -39,8 +39,6 @@
  * \brief Actions that can be taken on a channel in a bridge
  */
 enum bridge_channel_action_type {
-	/*! Bridged channel is to detect a feature hook */
-	BRIDGE_CHANNEL_ACTION_FEATURE,
 	/*! Bridged channel is to send a DTMF stream out */
 	BRIDGE_CHANNEL_ACTION_DTMF_STREAM,
 	/*! Bridged channel is to indicate talking start */
